--- a/mario-email-template-main/index.html
+++ b/mario-email-template-main/index.html
@@ -12,6 +12,124 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto&display=swap" rel="stylesheet">
+
+    <style>
+      body {
+        background-image: url("https://i.ibb.co/HD39LTF/background.jpg");
+        width: 100%;
+        height: 100vh;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        font-family: 'Oswald', sans-serif;
+        background-color: rgb(3, 91, 190);
+      }
+
+      h1 {
+        font-size: 3.125rem;
+      }
+
+      h2 {
+        color: blue;
+        text-align: center;
+        font-size: 80px;
+        letter-spacing: 2px;
+        font-weight: bold;
+        padding-bottom: 70px;
+      }
+
+      img {
+        width: 800px; 
+        display: block; 
+        margin: auto; 
+        position: relastive; 
+        top: 60px;
+      }
+
+      p {
+        color: blue;
+        font-size: 35px;
+        text-align: center;
+      }
+
+
+      .title {
+        text-align: center;
+        color: blue;
+        padding: 0 25px;
+        letter-spacing: 2px;
+        font-weight: bold;
+      }
+
+      .email-layout {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 60%;
+      }
+
+      @media(max-width: 1024px) {
+        img {
+          width: 400px; 
+          display: block; 
+          margin: auto; 
+          position: relative; 
+          top: 60px;
+        }
+
+        h2 {
+          color: blue;
+          text-align: center;
+          font-size: 60px;
+          letter-spacing: 2px;
+          font-weight: bold;
+          padding-bottom: 30px;
+        }
+      }
+
+      @media(max-width: 768px) {
+        p {
+          color: blue;
+          font-size: 20px;
+          text-align: center;
+        }
+      }
+
+      @media(max-width: 425px) {
+        .title {
+          text-align: center;
+          color: blue;
+          padding: 0 25px;
+          font-weight: bold;
+        }
+
+        h1 {
+          font-size: 18px;
+        }
+
+        p {
+          font-size: 10px;
+        }
+
+        img {
+          width: 100px;
+        }
+
+        h2 {
+          font-size: 18px;
+          padding-top: 50px;
+        }
+      }
+
+
+      @media(max-width: 320px) {
+        img {
+          position: absolute;
+          left: 110px;
+          top: 500px;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -27,7 +145,7 @@
           evento!
         </p>
         <br><br>
-        <a href="https://mogul.gg/tournaments/details/43736"><img src="images/boton-con-letras.png" alt=""></a>
+        <a href="https://mogul.gg/tournaments/details/43736"><img src="https://i.ibb.co/vZnGqfq/boton-con-letras.png" alt=""></a>
         <br><br><br>
         <h2>¡Buena Suerte!</h2>
       </div>
