--- a/mario-email-template-main/index.html
+++ b/mario-email-template-main/index.html
@@ -30,7 +30,7 @@
       }
 
       h2 {
-        color: blue;
+        color: rgb(255, 255, 255);
         text-align: center;
         font-size: 80px;
         letter-spacing: 2px;
@@ -47,7 +47,7 @@
       }
 
       p {
-        color: blue;
+        color: rgb(255, 255, 255);
         font-size: 35px;
         text-align: center;
       }
@@ -55,7 +55,7 @@
 
       .title {
         text-align: center;
-        color: blue;
+        color: rgb(255, 255, 255);
         padding: 0 25px;
         letter-spacing: 2px;
         font-weight: bold;
@@ -78,7 +78,7 @@
         }
 
         h2 {
-          color: blue;
+          color: rgb(255, 255, 255);
           text-align: center;
           font-size: 60px;
           letter-spacing: 2px;
@@ -89,7 +89,7 @@
 
       @media(max-width: 768px) {
         p {
-          color: blue;
+          color: rgb(255, 255, 255);
           font-size: 20px;
           text-align: center;
         }
@@ -98,7 +98,7 @@
       @media(max-width: 425px) {
         .title {
           text-align: center;
-          color: blue;
+          color: rgb(255, 255, 255);
           padding: 0 25px;
           font-weight: bold;
         }
